<resources>
    <string name="app_name">Clean.VRN</string>
    <string name="action_settings">Settings</string>

    <!-- Окно входа -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_as_player">Sign in as player</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email or phone number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login_app_name">Clean.VRN</string>

    <!--  Меню  -->
    <string name="menu_teams">Teams</string>
    <string name="menu_orgs">Organizators</string>
    <string name="menu_map">Map</string>
    <string name="menu_games">Games</string>
    <string name="menu_exit">Exit</string>

    <!--  Информация о пользователе  -->
    <string name="user_type_administrator">Administrator</string>
    <string name="user_type_organizator">Organizator</string>
    <string name="user_type_player">Player</string>

    <!--  Команды  -->
    <string name="title_team_list">Teams</string>

    <!-- Команды детальная информация   -->
    <string name="title_team_detail">Team</string>
    <string name="btn_team_save">Save</string>
    <string name="lbl_column_header_class">Class</string>
    <string name="lbl_column_header_coefficient">Coefficient</string>
    <string name="lbl_column_header_count">Count</string>
    <string name="lbl_column_header_points">Points</string>
    <string name="lbl_team_number">Number</string>
    <string name="lbl_team_name">Name</string>
    <string name="title_team_info">Team info</string>
    <string name="title_team_collected_garbages">Collected garbages</string>
    <string name="msg_team_deleted">Team was deleted successfully</string>

    <!--  Команды редактировани/создание  -->
    <string name="title_activity_team_edit">Edit team</string>
    <string name="title_activity_team_create">Create team</string>
    <string name="err_inp_team_name_empty">Name not can be empty</string>
    <string name="err_inp_team_number_empty">Number not can be empty</string>
    <string name="err_inp_team_garbage">Garbage must be more or equal 0 and not empty</string>

    <!--  Игры  -->
    <string name="title_activity_games">Games</string>
    <string name="lbl_game_address">Address</string>
    <string name="lbl_game_datetime">Datetime</string>
    <string name="lbl_game_route">Route</string>
    <string name="title_game_detail">Game</string>

    <!-- Игры детальная информация -->
    <string name="title_activity_game_detail">Game</string>
    <string name="game_name">Name of game</string>
    <string name="game_location">Location of game</string>
    <string name="game_route">Route</string>
    <string name="game_save">Save</string>
    <string name="title_game_info">Game info</string>
    <string name="title_game_coefficients">Coefficients</string>
    <string name="inp_game_description">Description</string>
    <string name="inp_game_date">Date start</string>
    <string name="inp_game_time">Time start</string>
    <string name="msg_game_deleted">Game deleted successfully</string>
    <string name="game_complete">Сomplete the game</string>
    <string name="game_complete_the_game_msg">You really want complete the game?</string>
    <string name="game_complete_the_game_btn_ok">Complete</string>
    <string name="game_complete_the_game_btn_cancel">Cancel</string>
    <string name="game_complete_the_game_completed_msg">Game completed successfully</string>
    <string name="txt_game_status_started">Started</string>
    <string name="txt_game_status_completed">Completed</string>
    <string name="txt_game_status_planned">Planned</string>
    <string name="lbl_game_status">Status</string>

    <!--  Игры редактировани/создание  -->
    <string name="title_activity_game_edit">Edit game</string>
    <string name="title_activity_game_create">Create game</string>
    <string name="err_inp_game_date">Not correct date</string>
    <string name="err_inp_game_time">Not correct time</string>
    <string name="err_inp_game_name">Not correct game name</string>
    <string name="err_inp_game_coefficient">Coefficient must be more or equal 0 and not empty</string>

    <!--  Организаторы  -->
    <string name="title_organizator_list">Organizators</string>
    <string name="title_organizator_detail">Organizator</string>
    <string name="lbl_organizator_firstname">Firstname</string>
    <string name="lbl_organizator_lastname">Lastname</string>
    <string name="lbl_organizator_middlename">Middlename</string>
    <string name="lbl_organizator_email">Email</string>
    <string name="lbl_organizator_phone">Phone</string>

    <!--  Организаторы детальная информация  -->
    <string name="title_activity_organizator_detail">Organizator</string>
    <string name="organizator_lastname">Lastame</string>
    <string name="organizator_firstname">Firstname</string>
    <string name="organizator_middlename">Middlename</string>
    <string name="organizator_email">Email</string>
    <string name="organizator_phone">Phone</string>
    <string name="organizator_save">Save</string>
    <string name="btn_generate_password">Generate password</string>
    <string name="dlg_save_generated_password">Save or remember new password</string>
    <string name="dlg_save_generated_password_btn_ok">OK</string>
    <string name="dlg_accept_generate_password">You really want generate new password? Old password will be deleted.</string>
    <string name="dlg_accept_generate_password_btn_ok">Yes, generate</string>
    <string name="dlg_accept_generate_password_btn_not">Cancel</string>
    <string name="msg_org_deleted">Organizator was deleted successfully</string>

    <!--  Организаторы редактировани/создание  -->
    <string name="title_activity_organizator_edit">Edit organizator</string>
    <string name="title_activity_organizator_create">Create organizator</string>
    <string name="err_inp_org_email_empty">Email is required</string>
    <string name="err_inp_org_email_incorrect">Incorrect email. Enter email in format email@mail.ru</string>
    <string name="err_inp_org_phone_empty">Phone is required</string>
    <string name="err_inp_org_phone_incorrect">Phone incorrect. Enter phone in format 9005553535</string>
    <string name="err_inp_org_firstname_empty">Firstname not can be empty</string>
    <string name="err_inp_org_lastname_empty">Lastname not can be empty</string>

    <!--  Map  -->
    <string name="title_activity_map">Map</string>
    <string name="dlg_marker_remove">Remove</string>
    <string name="dlg_marker_move">Move</string>
    <string name="dlg_marker_rename">Rename</string>
    <string name="dlg_marker_select_action">Select action</string>

    <!--  Обработчик ошибок  -->
    <string name="dlg_error_ok">OK</string>
    <string name="dlg_error_msg">Message: %1$s</string>
    <string name="dlg_error_code">Code: %1$d</string>
    <string name="dlg_place_remove_accept_msg">You really want remove this place?</string>
    <string name="dlg_place_remove_accept_accept">Yes, remove</string>
    <string name="dlg_place_remove_accept_cancel">Cancel</string>
    <string name="dlg_marker_rename_title">Enter description</string>
    <string name="dlg_marker_rename_accept">Accept</string>
    <string name="dlg_marker_rename_cancel">Cancel</string>
    <string name="dlg_place_move_accept_msg">You really want move place to this position?</string>
    <string name="dlg_place_move_accept_accept">Yes, move</string>
    <string name="dlg_place_move_accept_cancel">Cancel</string>
    <string name="dlg_accept_reset_start_point_msg">You really want change start point?</string>
    <string name="dlg_accept_reset_start_point_ok">Yes, change</string>
    <string name="dlg_accept_reset_start_point_cancel">Cancel</string>
    <string name="dlg_accept_reset_quest_zone_msg">You really want change quest zone?</string>
    <string name="dlg_accept_reset_quest_zone_ok">Yes, change</string>
    <string name="dlg_accept_reset_quest_zone_cancel">Cancel</string>
    <string name="map_marker_title_garbage">Garbage</string>
    <string name="map_marker_title_toilet">Toilet</string>
    <string name="map_marker_title_another_place">Another place</string>
    <string name="map_marker_title_start_place">Start place</string>
</resources>
