<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_games">

    <fragment
        android:id="@+id/nav_teams"
        android:name="com.rydvi.clean_vrn.ui.teams.TeamsFragment"
        android:label="@string/title_team_list"
        tools:layout="@layout/fragment_teams" >
        <action
            android:id="@+id/action_nav_teams_to_nav_team_detail"
            app:destination="@id/nav_team_detail" />
        <action
            android:id="@+id/action_nav_teams_to_nav_team_create_edit"
            app:destination="@id/nav_team_create_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_organizators"
        android:name="com.rydvi.clean_vrn.ui.organizators.OrganizatorsFragment"
        android:label="@string/title_organizator_list"
        tools:layout="@layout/fragment_organizators" >
        <action
            android:id="@+id/action_nav_organizators_to_nav_organizator_detail"
            app:destination="@id/nav_organizator_detail" />
        <action
            android:id="@+id/action_nav_organizators_to_nav_organizator_create_edit"
            app:destination="@id/nav_organizator_create_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.rydvi.clean_vrn.ui.map.MapFragment"
        android:label="@string/title_activity_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_games"
        android:name="com.rydvi.clean_vrn.ui.games.GamesFragment"
        android:label="@string/title_activity_games"
        tools:layout="@layout/fragment_games" >
        <action
            android:id="@+id/action_nav_games_to_gameDetailFragment"
            app:destination="@+id/nav_game_detail" />
        <action
            android:id="@+id/action_nav_games_to_gameCreateEditFragment"
            app:destination="@id/nav_game_create_edit" />
    </fragment>
    <fragment
        android:id="@+id/nav_game_detail"
        android:name="com.rydvi.clean_vrn.ui.games.GameDetailFragment"
        android:label="@string/title_activity_game_detail" >
        <action
            android:id="@+id/action_gameDetailFragment_to_gameCreateEditFragment"
            app:destination="@id/nav_game_create_edit" />
    </fragment>
    <fragment
        android:id="@+id/nav_game_create_edit"
        android:name="com.rydvi.clean_vrn.ui.games.GameCreateEditFragment"
        android:label="@string/title_activity_game_create"
        tools:layout="@layout/fragment_game_create_edit" />
    <fragment
        android:id="@+id/nav_team_detail"
        android:name="com.rydvi.clean_vrn.ui.teams.TeamDetailFragment"
        android:label="@string/title_team_detail"
        tools:layout="@layout/fragment_team_detail" >
        <action
            android:id="@+id/action_teamDetailFragment_to_teamCreateEditFragment"
            app:destination="@id/nav_team_create_edit" />
    </fragment>
    <fragment
        android:id="@+id/nav_team_create_edit"
        android:name="com.rydvi.clean_vrn.ui.teams.TeamCreateEditFragment"
        android:label="@string/title_activity_team_create"
        tools:layout="@layout/fragment_team_create_edit" />
    <fragment
        android:id="@+id/nav_organizator_create_edit"
        android:name="com.rydvi.clean_vrn.ui.organizators.OragnizatorCreateEditFragment"
        android:label="@string/title_activity_organizator_create" />
    <fragment
        android:id="@+id/nav_organizator_detail"
        android:name="com.rydvi.clean_vrn.ui.organizators.OrganizatorDetailFragment"
        android:label="@string/title_activity_organizator_detail" >
        <action
            android:id="@+id/action_nav_organizator_detail_to_nav_organizator_create_edit"
            app:destination="@id/nav_organizator_create_edit" />
    </fragment>

</navigation>