<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.teams.TeamCreateEditActivity"
    tools:showIn="@layout/activity_team_create_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_team_info"
            android:textSize="@dimen/title_form_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#7b7b7b" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inp_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_team_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inp_team_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_team_number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/vertical_layout_collected_garbages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/title_team_collected_garbages"
                android:textSize="@dimen/title_form_size"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#7b7b7b" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_team_collected_garbages"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>